crates/test-ui/ui/main_thread_only_not_allocable.stderr
error[E0061]: this function takes 1 argument but 0 arguments were supplied
  --> ui/main_thread_only_not_allocable.rs
   |
   |     let _ = MyMainThreadOnlyClass::alloc();
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^-- argument #1 of type `MainThreadMarker` is missing
   |
note: associated function defined here
  --> $WORKSPACE/crates/objc2/src/top_level_traits.rs
   |
   |     fn alloc(mtm: MainThreadMarker) -> Allocated<Self>
   |        ^^^^^
help: provide the argument
   |
14 |     let _ = MyMainThreadOnlyClass::alloc(/* MainThreadMarker */);
   |                                         ~~~~~~~~~~~~~~~~~~~~~~~~
